added routes and fade animation - 24.09.24

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,25 @@
+// font imports
+@font-face {
+  font-family: "monsterrat";
+  src: url("./media/fonts/Montserrat-Regular.otf");
+}
+@font-face {
+  font-family: "roboto";
+  src: url("./media/fonts/Roboto-Regular.ttf");
+}
+
 // colours
 $colour1: #3b2f2f;
 $colour2: #fffffc;
 $colour3: #128482;
 $colour4: #d0491e;
+
+// fonts
+$font1: "monsterrat";
+$font2: "roboto";
+$font-size1: 21px;
+
+// padding
+$gap1: 7px;
+$gap2: -7px;
+$padding1: $gap1 2%;
