--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import "./variables/variables";
 
 * {
   box-sizing: border-box;
@@ -9,9 +9,26 @@
 }
 
 .app {
-  background-color: $colour1;
+  background-color: rgba($color: $colour1, $alpha: 0.8);
+  max-height: 100vh;
   min-height: 100vh;
   overflow: hidden;
+  padding: $padding1;
+  position: relative;
+  .background-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+  }
+  .app-content {
+    position: relative;
+    z-index: 1;
+  }
 }
 
 h1 {
