--- a/src/components/layout/style.scss
+++ b/src/components/layout/style.scss
@@ -1,7 +1,8 @@
-@import "../../variables";
+@import "../../variables/variables";
 
 .header {
   align-items: center;
+  border-bottom: $border1;
   display: flex;
   flex-direction: column;
   .header-title-container {
@@ -9,7 +10,7 @@
     display: flex;
     flex-direction: column;
     .header-logo {
-      margin: $gap1 0 $gap2 0;
+      margin-bottom: $gap2;
       width: 70px;
     }
     .header-name {
@@ -17,6 +18,12 @@
     .header-subtitle {
       margin-top: $gap2;
     }
+  }
+  .header-links {
+    height: 70px;
+    position: absolute;
+    right: 0;
+    top: $gap1;
   }
 }
 
